--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,18 @@
     </div>
     <ul class="products-list page__centerer">
       <li class="product-card">
-        <img class="product-card__image" width="140" height="112" src="img/catalog/chiken500.png" alt="Курица">
+        <picture>
+          <source type="image/avif" srcset="./img/catalog/wide/chicken-500@1x.avif 1x, ./img/catalog/wide/chicken-500@2x.avif 2x" media="(min-width: 1271px)">
+          <source type="image/webp" srcset="./img/catalog/wide/chicken-500@1x.webp 1x, ./img/catalog/wide/chicken-500@2x.webp 2x" media="(min-width: 1271px)">
+          <source type="image/png" srcset="./img/catalog/wide/chicken-500@1x.png 1x, ./img/catalog/wide/chicken-500@2x.png 2x" media="(min-width:1271px)">
+          <source type="image/avif" srcset="./img/catalog/tablet/chicken-500@1x.avif 1x, ./img/catalog/tablet/chicken-500@2x.avif 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/webp" srcset="./img/catalog/tablet/chicken-500@1x.webp 1x, ./img/catalog/tablet/chicken-500@2x.webp 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/png" srcset="./img/catalog/tablet/chicken-500@1x.png 1x, ./img/catalog/tablet/chicken-500@2x.png 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/avif" srcset="./img/catalog/mobile/chicken-500@1x.avif 1x, ./img/catalog/mobile/chicken-500@2x.avif 2x" media="(max-width: 767px)">
+          <source type="image/webp" srcset="./img/catalog/mobile/chicken-500@1x.webp 1x, ./img/catalog/mobile/chicken-500@2x.webp 2x" media="(max-width: 767px)">
+          <source type="image/png" srcset="./img/catalog/mobile/chicken-500@1x.png 1x, ./img/catalog/mobile/chicken-500@2x.png 2x" media="(max-width: 767px)">
+          <img class="product-card__image" width="140" height="112" src="./img/catalog/mobile/chicken-500@1x.png" alt="Курица">
+        </picture>
         <div class="product-card__text">
           <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
           <div class="product-card__items">
@@ -30,7 +41,18 @@
         <a href="#" class="product-card__button">заказать</a>
       </li>
       <li class="product-card">
-        <img class="product-card__image" width="140" height="112" src="./img/catalog/chiken1000.png" alt="Курица">
+        <picture>
+          <source type="image/avif" srcset="./img/catalog/wide/chicken-1000@1x.avif 1x, ./img/catalog/wide/chicken-1000@2x.avif 2x" media="(min-width: 1271px)">
+          <source type="image/webp" srcset="./img/catalog/wide/chicken-1000@1x.webp 1x, ./img/catalog/wide/chicken-1000@2x.webp 2x" media="(min-width: 1271px)">
+          <source type="image/png" srcset="./img/catalog/wide/chicken-1000@1x.png 1x, ./img/catalog/wide/chicken-1000@2x.png 2x" media="(min-width:1271px)">
+          <source type="image/avif" srcset="./img/catalog/tablet/chicken-1000@1x.avif 1x, ./img/catalog/tablet/chicken-1000@2x.avif 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/webp" srcset="./img/catalog/tablet/chicken-1000@1x.webp 1x, ./img/catalog/tablet/chicken-1000@2x.webp 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/png" srcset="./img/catalog/tablet/chicken-1000@1x.png 1x, ./img/catalog/tablet/chicken-1000@2x.png 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/avif" srcset="./img/catalog/mobile/chicken-1000@1x.avif 1x, ./img/catalog/mobile/chicken-1000@2x.avif 2x" media="(max-width: 767px)">
+          <source type="image/webp" srcset="./img/catalog/mobile/chicken-1000@1x.webp 1x, ./img/catalog/mobile/chicken-1000@2x.webp 2x" media="(max-width: 767px)">
+          <source type="image/png" srcset="./img/catalog/mobile/chicken-1000@1x.png 1x, ./img/catalog/mobile/chicken-1000@2x.png 2x" media="(max-width: 767px)">
+          <img class="product-card__image" width="140" height="112" src="./img/catalog/mobile/chicken-1000@1x.png" alt="Курица">
+        </picture>
         <div class="product-card__text">
           <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
           <div class="product-card__items">
@@ -45,7 +67,18 @@
         <a href="#" class="product-card__button">заказать</a>
       </li>
       <li class="product-card">
-        <img class="product-card__image" width="140" height="112" src="img/catalog/fish500.png" alt="Рыба">
+        <picture>
+          <source type="image/avif" srcset="./img/catalog/wide/fish-500@1x.avif 1x, ./img/catalog/wide/fish-500@2x.avif 2x" media="(min-width: 1271px)">
+          <source type="image/webp" srcset="./img/catalog/wide/fish-500@1x.webp 1x, ./img/catalog/wide/fish-500@2x.webp 2x" media="(min-width: 1271px)">
+          <source type="image/png" srcset="./img/catalog/wide/fish-500@1x.png 1x, ./img/catalog/wide/fish-500@2x.png 2x" media="(min-width:1271px)">
+          <source type="image/avif" srcset="./img/catalog/tablet/fish-500@1x.avif 1x, ./img/catalog/tablet/fish-500@2x.avif 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/webp" srcset="./img/catalog/tablet/fish-500@1x.webp 1x, ./img/catalog/tablet/fish-500@2x.webp 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/png" srcset="./img/catalog/tablet/fish-500@1x.png 1x, ./img/catalog/tablet/fish-500@2x.png 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/avif" srcset="./img/catalog/mobile/fish-500@1x.avif 1x, ./img/catalog/mobile/fish-500@2x.avif 2x" media="(max-width: 767px)">
+          <source type="image/webp" srcset="./img/catalog/mobile/fish-500@1x.webp 1x, ./img/catalog/mobile/fish-500@2x.webp 2x" media="(max-width: 767px)">
+          <source type="image/png" srcset="./img/catalog/mobile/fish-500@1x.png 1x, ./img/catalog/mobile/fish-500@2x.png 2x" media="(max-width: 767px)">
+          <img class="product-card__image" width="140" height="112" src="./img/catalog/mobile/fish-500@1x.png" alt="Курица">
+        </picture>
         <div class="product-card__text">
           <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
           <div class="product-card__items">
@@ -60,7 +93,18 @@
         <a href="#" class="product-card__button">заказать</a>
       </li>
       <li class="product-card">
-        <img class="product-card__image" width="140" height="112" src="img/catalog/fish1000.png" alt="Рыба">
+        <picture>
+          <source type="image/avif" srcset="./img/catalog/wide/fish-1000@1x.avif 1x, ./img/catalog/wide/fish-1000@2x.avif 2x" media="(min-width: 1271px)">
+          <source type="image/webp" srcset="./img/catalog/wide/fish-1000@1x.webp 1x, ./img/catalog/wide/fish-1000@2x.webp 2x" media="(min-width: 1271px)">
+          <source type="image/png" srcset="./img/catalog/wide/fish-1000@1x.png 1x, ./img/catalog/wide/fish-1000@2x.png 2x" media="(min-width:1271px)">
+          <source type="image/avif" srcset="./img/catalog/tablet/fish-1000@1x.avif 1x, ./img/catalog/tablet/fish-1000@2x.avif 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/webp" srcset="./img/catalog/tablet/fish-1000@1x.webp 1x, ./img/catalog/tablet/fish-1000@2x.webp 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/png" srcset="./img/catalog/tablet/fish-1000@1x.png 1x, ./img/catalog/tablet/fish-1000@2x.png 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/avif" srcset="./img/catalog/mobile/fish-1000@1x.avif 1x, ./img/catalog/mobile/fish-1000@2x.avif 2x" media="(max-width: 767px)">
+          <source type="image/webp" srcset="./img/catalog/mobile/fish-1000@1x.webp 1x, ./img/catalog/mobile/fish-1000@2x.webp 2x" media="(max-width: 767px)">
+          <source type="image/png" srcset="./img/catalog/mobile/fish-1000@1x.png 1x, ./img/catalog/mobile/fish-1000@2x.png 2x" media="(max-width: 767px)">
+          <img class="product-card__image" width="140" height="112" src="./img/catalog/mobile/fish-1000@1x.png" alt="Курица">
+        </picture>
         <div class="product-card__text">
           <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
           <div class="product-card__items">
@@ -75,7 +119,18 @@
         <a href="#" class="product-card__button">заказать</a>
       </li>
       <li class="product-card">
-        <img class="product-card__image" width="140" height="112" src="img/catalog/buckwheat500.png" alt="Гречка">
+        <picture>
+          <source type="image/avif" srcset="./img/catalog/wide/buckwheat-500@1x.avif 1x, ./img/catalog/wide/buckwheat-500@2x.avif 2x" media="(min-width: 1271px)">
+          <source type="image/webp" srcset="./img/catalog/wide/buckwheat-500@1x.webp 1x, ./img/catalog/wide/buckwheat-500@2x.webp 2x" media="(min-width: 1271px)">
+          <source type="image/png" srcset="./img/catalog/wide/buckwheat-500@1x.png 1x, ./img/catalog/wide/buckwheat-500@2x.png 2x" media="(min-width:1271px)">
+          <source type="image/avif" srcset="./img/catalog/tablet/buckwheat-500@1x.avif 1x, ./img/catalog/tablet/buckwheat-500@2x.avif 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/webp" srcset="./img/catalog/tablet/buckwheat-500@1x.webp 1x, ./img/catalog/tablet/buckwheat-500@2x.webp 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/png" srcset="./img/catalog/tablet/buckwheat-500@1x.png 1x, ./img/catalog/tablet/buckwheat-500@2x.png 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/avif" srcset="./img/catalog/mobile/buckwheat-500@1x.avif 1x, ./img/catalog/mobile/buckwheat-500@2x.avif 2x" media="(max-width: 767px)">
+          <source type="image/webp" srcset="./img/catalog/mobile/buckwheat-500@1x.webp 1x, ./img/catalog/mobile/buckwheat-500@2x.webp 2x" media="(max-width: 767px)">
+          <source type="image/png" srcset="./img/catalog/mobile/buckwheat-500@1x.png 1x, ./img/catalog/mobile/buckwheat-500@2x.png 2x" media="(max-width: 767px)">
+          <img class="product-card__image" width="140" height="112" src="./img/catalog/mobile/buckwheat-500@1x.png" alt="Курица">
+        </picture>
         <div class="product-card__text">
           <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
           <div class="product-card__items">
@@ -90,7 +145,18 @@
         <a href="#" class="product-card__button">заказать</a>
       </li>
       <li class="product-card">
-        <img class="product-card__image" width="140" height="112" src="img/catalog/buckwheat1000.png" alt="Гречка">
+        <picture>
+          <source type="image/avif" srcset="./img/catalog/wide/buckwheat-1000@1x.avif 1x, ./img/catalog/wide/buckwheat-1000@2x.avif 2x" media="(min-width: 1271px)">
+          <source type="image/webp" srcset="./img/catalog/wide/buckwheat-1000@1x.webp 1x, ./img/catalog/wide/buckwheat-1000@2x.webp 2x" media="(min-width: 1271px)">
+          <source type="image/png" srcset="./img/catalog/wide/buckwheat-1000@1x.png 1x, ./img/catalog/wide/buckwheat-1000@2x.png 2x" media="(min-width:1271px)">
+          <source type="image/avif" srcset="./img/catalog/tablet/buckwheat-1000@1x.avif 1x, ./img/catalog/tablet/buckwheat-1000@2x.avif 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/webp" srcset="./img/catalog/tablet/buckwheat-1000@1x.webp 1x, ./img/catalog/tablet/buckwheat-1000@2x.webp 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/png" srcset="./img/catalog/tablet/buckwheat-1000@1x.png 1x, ./img/catalog/tablet/buckwheat-1000@2x.png 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/avif" srcset="./img/catalog/mobile/buckwheat-1000@1x.avif 1x, ./img/catalog/mobile/buckwheat-1000@2x.avif 2x" media="(max-width: 767px)">
+          <source type="image/webp" srcset="./img/catalog/mobile/buckwheat-1000@1x.webp 1x, ./img/catalog/mobile/buckwheat-1000@2x.webp 2x" media="(max-width: 767px)">
+          <source type="image/png" srcset="./img/catalog/mobile/buckwheat-1000@1x.png 1x, ./img/catalog/mobile/buckwheat-1000@2x.png 2x" media="(max-width: 767px)">
+          <img class="product-card__image" width="140" height="112" src="./img/catalog/mobile/buckwheat-1000@1x.png" alt="Курица">
+        </picture>
         <div class="product-card__text">
           <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
           <div class="product-card__items">
@@ -105,7 +171,18 @@
         <a href="#" class="product-card__button">заказать</a>
       </li>
       <li class="product-card">
-        <img class="product-card__image" width="140" height="112" src="img/catalog/rice500.png" alt="Рис">
+        <picture>
+          <source type="image/avif" srcset="./img/catalog/wide/rice-500@1x.avif 1x, ./img/catalog/wide/rice-500@2x.avif 2x" media="(min-width: 1271px)">
+          <source type="image/webp" srcset="./img/catalog/wide/rice-500@1x.webp 1x, ./img/catalog/wide/rice-500@2x.webp 2x" media="(min-width: 1271px)">
+          <source type="image/png" srcset="./img/catalog/wide/rice-500@1x.png 1x, ./img/catalog/wide/rice-500@2x.png 2x" media="(min-width:1271px)">
+          <source type="image/avif" srcset="./img/catalog/tablet/rice-500@1x.avif 1x, ./img/catalog/tablet/rice-500@2x.avif 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/webp" srcset="./img/catalog/tablet/rice-500@1x.webp 1x, ./img/catalog/tablet/rice-500@2x.webp 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/png" srcset="./img/catalog/tablet/rice-500@1x.png 1x, ./img/catalog/tablet/rice-500@2x.png 2x" media="(min-width: 768px) and (max-width: 1270px)">
+          <source type="image/avif" srcset="./img/catalog/mobile/rice-500@1x.avif 1x, ./img/catalog/mobile/rice-500@2x.avif 2x" media="(max-width: 767px)">
+          <source type="image/webp" srcset="./img/catalog/mobile/rice-500@1x.webp 1x, ./img/catalog/mobile/rice-500@2x.webp 2x" media="(max-width: 767px)">
+          <source type="image/png" srcset="./img/catalog/mobile/rice-500@1x.png 1x, ./img/catalog/mobile/rice-500@2x.png 2x" media="(max-width: 767px)">
+          <img class="product-card__image" width="140" height="112" src="./img/catalog/mobile/rice-500@1x.png" alt="Курица">
+        </picture>
         <div class="product-card__text">
           <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
           <div class="product-card__items">
