--- a/source/form.html
+++ b/source/form.html
@@ -47,10 +47,16 @@
               <label class="inputs-group__input-label inputs-group__input-label--email" for="email">
                 E-mail:*
                 <input class="inputs-group__input" id="email" name="email" type="email" required value="kuklachev@gmail.com" placeholder="Введите ваш E-mail">
+                <svg class="contacts-icon">
+                  <use href="./img/contacts.svg#email">
+                </svg>
               </label>
               <label class="inputs-group__input-label inputs-group__input-label--phone" for="phone">
                 Телефон:*
                 <input class="inputs-group__input" id="phone" name="phone" type="tel" required value="8 (960) 900-60-90" placeholder="Введите номер вашего телефона">
+                <svg class="contacts-icon">
+                  <use href="./img/contacts.svg#phone">
+                </svg>
               </label>
             </div>
           </fieldset>
