closed <use></use>(((

--- a/source/form.html
+++ b/source/form.html
@@ -48,14 +48,14 @@
                 E-mail:*
                 <input class="inputs-group__input" id="email" name="email" type="email" required value="kuklachev@gmail.com" placeholder="Введите ваш E-mail">
                 <svg class="contacts-icon">
-                  <use href="./img/contacts.svg#email">
+                  <use href="./img/contacts.svg#email"></use>
                 </svg>
               </label>
               <label class="inputs-group__input-label inputs-group__input-label--phone" for="phone">
                 Телефон:*
                 <input class="inputs-group__input" id="phone" name="phone" type="tel" required value="8 (960) 900-60-90" placeholder="Введите номер вашего телефона">
                 <svg class="contacts-icon">
-                  <use href="./img/contacts.svg#phone">
+                  <use xlink:href="./img/contacts.svg#phone"></use>
                 </svg>
               </label>
             </div>
