--- a/source/index.html
+++ b/source/index.html
@@ -108,12 +108,12 @@
               </picture>
             </div>
           </div>
-          <div class="slider__range-container">
-            <span class="slider__text">Было</span>
-            <div class="cat-range">
+          <div class="cat-range" tabindex="0">
+            <span class="cat-range__text">Было</span>
+            <div class="cat-range__range-container">
               <div class="cat-range__mark"></div>
             </div>
-            <span class="slider__text">Стало</span>
+            <span class="cat-range__text">Стало</span>
           </div>
         </div>
       </div>
